--- a/index.html
+++ b/index.html
@@ -88,10 +88,13 @@
 
 		<section>	<!--mouth subsection-->
 			<h3>Mouth:</h3>
-			<p>The mouth is very large, with the upper jaw extending past the rear edge of the eye when closed—this is the most defining feature.</p>
+			<ul>
+				<li>The mouth is very large, with the upper jaw extending past the rear edge of the eye when closed—this is the most defining feature.</li>
+			</ul>
 		</section>
 
-		<section>
+		
+		<section>	<!--body shape/size subsection-->
 			<h3>Body Shape and Size:</h3>
 			
 			<ul>
@@ -100,43 +103,52 @@
 			</ul>
 		</section>
 
-				<header>Coloration:</header>
-				<ul>
-					<section>The body is usually greenish to olive on the back, fading to a whitish or pale yellow belly.</section>
-
-					<section>A distinct dark, horizontal stripe runs along each side of the body, from the gills to the tail.</section>
-				</ul>
-
-				<header>Fins:</header>
-				<ul>
-					<section>It has two dorsal fins: the front dorsal fin is spiny, and the rear dorsal fin is soft-rayed, but they are connected by a shallow notch.</section>
-
-					<section>The tail fin is slightly forked or rounded.</section>
-				</ul>
-
-				<header>Scales and Texture:</header>
-				<ul>
-					<section>Covered with small, rough scales (ctenoid scales).</section>
-
-					<section>The skin feels somewhat rough if rubbed from tail to head.</section>
-				</ul>
-
-				<header>Eye color:</header>
-				<ul>
-					<section>Typically dark or reddish-brown, especially in older or more aggressive individuals.</section>
-				</ul>
-
-				<header>Comparison Tip:</header>
-				<ul>
-					<header>Don’t confuse it with the smallmouth bass or spotted bass:</header>
-					<ul>
-						<section>Smallmouth bass have a smaller mouth (jaw doesn't reach past the eye) and a more bronze color.</section>
-
-						<section>Spotted bass have smaller mouths too, and their side markings are more blotchy than solid.</section>
-					</ul>
-				</ul>
+		
+		<section>	<!--coloration subsection-->
+			<h3>Coloration:</h3>
+			
+			<ul>
+					<li>The body is usually greenish to olive on the back, fading to a whitish or pale yellow belly.</li>
+					<li>A distinct dark, horizontal stripe runs along each side of the body, from the gills to the tail.</li>
 			</ul>
-		</ul>
+		</section>
+		
+		
+		<section>	<!--fins subsection-->
+			<h3>Fins:</h3>
+			
+			<ul>
+				<li>It has two dorsal fins: the front dorsal fin is spiny, and the rear dorsal fin is soft-rayed, but they are connected by a shallow notch.</li>
+				<li>The tail fin is slightly forked or rounded.</li>
+			</ul>
+		</section>
+		
+		
+		<section>	<!--scales/texture subsection-->
+			<h3>Scales and Texture:</h3>
+			<ul>
+				<li>Covered with small, rough scales (ctenoid scales).</li>
+				<li>The skin feels somewhat rough if rubbed from tail to head.</li>
+			</ul>
+		</section>
+			
+			
+		<section>
+			<h3>Eye color:</h3>
+				<ul>
+					<li>Typically dark or reddish-brown, especially in older or more aggressive individuals.</li>
+				</ul>
+		</section>
+		
+		
+		<section>	<!--comparison tip subsection-->
+				<h3>Comparison Tip:</h3>
+				<p>Don’t confuse it with the smallmouth bass or spotted bass:</p>
+				<ul>
+					<li>Smallmouth bass have a smaller mouth (jaw doesn't reach past the eye) and a more bronze color.</li>
+					<li>Spotted bass have smaller mouths too, and their side markings are more blotchy than solid.</li>
+				</ul>
+		</section>
 	</section>
 	
 	<!--Sport fishing section-->
